index.css
*{
  height: 100%;
  margin: 0px;
  padding: 0px;
  font-family: 'ZCOOL XiaoWei', serif;

}

.nav-height {
  height:80px;
}
nav {
  width: 100%;
  width: 100vw;
  position: fixed;
  top: 0;
  background-color: rgb(237,211,192);
  -webkit-box-shadow: 0px 4px 15px 1px rgba(50,50,50,1);
  box-shadow: 0px 4px 15px 1px rgba(50,50,50,1);
  margin-bottom: 30px;
  z-index: 100;
}
  nav>ul {
    width: 100%;
    width: 100vw;
    height: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-around;
    align-items: center;
    list-style-type: none;
    margin: 0px;
    text-decoration: none;
    padding: 0px;
  } 
  nav>ul>a {
    width: 100%;
    height: 100%;
    display:flex;
    justify-content: center;
    align-items: center;
    margin: 0px;
    text-decoration: none;
    display: flex;
    flex-direction: column;
    color: rgb(87, 25, 140);
  }
  nav img {
    height: 50px;
  }
  nav>ul>a:hover, nav>ul>a:active {
    background-color: rgba(187, 149, 219,0.6);

  }





#cover {
	background-image: url(cover.png);
	background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  height: 100%;
  width: auto;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center; 
  color: white;
  text-align: center;
}
#cover h1 {
	margin-top: 60px;
  height: 87px;
	font-size: 70px;
  font-family: 'Lobster', cursive;

}
#cover h2 {
  margin-top: 30px;
}

